...

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintTop_toBottomOf="@id/description_text_card"
            app:layout_constraintBottom_toTopOf="@id/similar_movie_collection"
            />

        <include
            android:id="@+id/similar_movie_collection"
            layout="@layout/movie_collection"

...
